# OTUSFirstTask

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  lib.cpp  lib.h  main.cpp  test.cpp  version.h.in
